adding extension mechanism for async protocols